--- a/Estilo/main2.css
+++ b/Estilo/main2.css
@@ -1,4 +1,4 @@
-/* Início customização navbar do Aluno */
+
 #navbarAluno{
 list-style-type: none;
 margin: 0; padding: 0;
@@ -9,11 +9,10 @@ float: left;
 }
 ul{
     display: block;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     font-family: 'Roboto Mono', monospace;
     left: 0%;
     text-align: center;
-    color: rgb(0, 0, 0);
     position: relative;
 }
 #searchbar{
@@ -21,7 +20,14 @@ ul{
     height: 2%;
     width: 100%;
 }
-/* Navbar Aluno */
+
+#userNav{
+    position: absolute;
+    top: 80%;
+    font-family: Arial, Helvetica, sans-serif;
+    left: 20%;
+}
+
 img{
     position: absolute;
     top: 87.5%;
@@ -29,7 +35,7 @@ img{
 body{
     background: radial-gradient(circle, rgba(0,212,255,1) 0%, rgba(0,212,255,1) 35%, rgba(0,153,255,1) 100%);
 }
-#centroInfo{
+#centroInfoAluno{
     position: relative;
     top: 50%;
 }
@@ -96,9 +102,15 @@ body{
 #acervo{
     background: none;
 }
-#logoutBtn{
-    top: 89.5%;
+/*#logoutBtn{
+    position: relative;
+    top: 87.5%;
+    left: 35%;
+} */
+form{
     position: absolute;
+    top: 87.5%;
+    left: 50%;
 }
 #iconOut{
     top: 90%;
@@ -110,7 +122,7 @@ body{
     position: absolute;
     left: 50%;
 }
-/* Navbar Prof */
+
 #navbarProf{
     list-style-type: none;
     margin: 0; padding: 0;
@@ -127,4 +139,18 @@ body{
     text-align: center;
     color: rgb(0, 0, 0);
     position: relative;
+}
+
+#navbarResponsavel{
+    list-style-type: none;
+    margin: 0; padding: 0;
+    width: 15%;
+    position: absolute;
+    height: 100%;
+    float: left;
+}
+h1{
+    position: absolute;
+    top: 0%;
+    left: 30%;
 }
