PagHoraio,alteracaonaPagdeFreqEAlteracoesNoBD/MelhoriasNoCSS

--- a/Estilo/main2.css
+++ b/Estilo/main2.css
@@ -99,6 +99,21 @@ body{
 #content-boxes-4:hover{
         background-color: white;
 }
+/*#content-boxes-5{
+    width: 320px;
+    padding: 4px;
+    border: 5px solid rgb(0, 4, 255);
+    border-radius: 10px;
+    text-align: center;
+    position: relative;
+    left: 50%;
+    top: 60%;
+    list-style-type: none;
+    transition-duration: 0.4s;
+}
+#content-boxes-5:hover{
+    background-color: white;
+}*/
 #acervo{
     background: none;
 }
