--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -41,7 +41,7 @@ h1{
   position: fixed;
   top: 0;
   width: 100%;
-  height: 57px;
+  height: 50px;
  
 }
 
@@ -63,6 +63,9 @@ h1{
   padding: 18px 13px;
   text-decoration: none;
   background-color: #0dcaf0;
+}
+.aNavbar{
+  position: relative;
 }
 
 .dropdown {
@@ -91,13 +94,13 @@ h1{
 }
 
 /* options dos dropdowns */
-.dropdown-content a {
+.dropdown-content a{
   float: none;
   color: black;
   padding: 18px 18px;
   text-decoration: none;
   display: block;
-  text-align: left;
+  text-align: center;
 }
 
 .dropbtn:hover, .config:hover ,.aNavbar:hover{
@@ -222,6 +225,7 @@ h1{
   padding: 2px;
   margin-left:77px;
   display: flex;
+  border-radius: 2%;
  
 }
 
@@ -230,4 +234,16 @@ h1{
     background-color:#0aa3c2;
     border-color: black;
     
+}
+
+/*Estilo dos cards do Aluno no Index */
+#card1Aluno{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+#card1Aluno:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+#corpoCard1Aluno{
+  padding: 2px 16px;
 }
