--- a/Estilo/main2.css
+++ b/Estilo/main2.css
@@ -9,8 +9,8 @@
     }
     ul{
         display: block;
-        background-color: rgb(255, 255, 255);
-        font-family: 'Roboto Mono', monospace;
+        background-color: black;
+        font-family: Arial, Helvetica, sans-serif;
         left: 0%;
         text-align: center;
         position: relative;
@@ -33,7 +33,7 @@
         top: 87.5%;
     }
     body{
-        background: radial-gradient(circle, rgba(0,212,255,1) 0%, rgba(0,212,255,1) 35%, rgba(0,153,255,1) 100%);
+        background: white;
     }
     #centroInfoAluno{
         position: relative;
