--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -8,6 +8,19 @@ body{
     overflow-x: hidden; 
 }
 
+#bodyUserEdit{ 
+  text-align: center;
+  font-size: 20px;
+  background-color: turquoise;
+  
+}
+#forma{ 
+  text-align: center;
+  font-size: 20px;
+  background-color: turquoise;
+  
+} 
+
 h1{
     text-align: center;
 }
@@ -41,6 +54,7 @@ h1{
   top: 0;
   width: 100%;
   height: 50px;
+  
  
 }
 
@@ -56,7 +70,7 @@ h1{
 .navbar a{
     
   float:right;
-  color: black;
+  color: rgb(0, 0, 0);
   font-size: 16px;
   text-align: center;
   padding: 18px 13px;
@@ -125,14 +139,14 @@ h1{
     text-align: center;
     padding-top: 1px;
     width: 95px;
-    height: 25px;
+    height: 16px;
 }
 
 
 /* Sidebar */
 
 .sidebar {
-    text-align: center;
+  text-align: center;
   height: 100%;
   width: 250px;
   position: fixed; 
@@ -244,5 +258,16 @@ h1{
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 #corpoCard1Aluno{
-  padding: 2px 16px;
+  text-align: center;
+  padding: 5px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  position: relative;
+  background-color: turquoise;
+  border-radius: 20px;
 }
+
+
+
+
