--- a/Estilo/main5.css
+++ b/Estilo/main5.css
@@ -4,6 +4,7 @@
     font-size: 20px;
     background-color: #0dcaf0;
     position: relative;
+    top: 40px;
   }
 
 .botaog{
@@ -14,7 +15,7 @@
     padding-left: 60px;
     padding-right: 60px;
     border-radius: 70px;
-    top: -40px;
+
 }
 
 .botaog:hover{
@@ -23,8 +24,15 @@
     cursor: pointer;
 }
 
-
-
+body{
+    background: radial-gradient(circle, rgba(0,212,255,1) 0%, rgba(0,212,255,1) 35%, rgba(0,153,255,1) 100%);;
+    text-align: center;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    
+}
 
 
 
