--- a/Estilo/main3.css
+++ b/Estilo/main3.css
@@ -1,4 +1,15 @@
-#bodyUserEdit{
+#bodyt{
+        background: radial-gradient(circle, rgba(0,212,255,1) 0%, rgba(0,212,255,1) 35%, rgba(0,153,255,1) 100%);;
+        text-align: center;
+        position: absolute;
+        top: 67%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        
+}
 
-    background-color: blue;
+#bodyvt{
+    background: radial-gradient(circle, rgba(0,212,255,1) 0%, rgba(0,212,255,1) 35%, rgba(0,153,255,1) 100%);;
+       
+
 }
